Added paragraph to body and heading

--- a/recipes/bestbrownies.html
+++ b/recipes/bestbrownies.html
@@ -8,7 +8,15 @@
 <body>
 <h1>Best Brownies</h1>
 <a href="https://www.allrecipes.com/recipe/10549/best-brownies/">Recipe here!</a>
+<P>
+<img src="../recipes/brownie.jpeg" alt="Delicious brownie covered in whipped cream and a cherry" />
+</p>
 
+<h4>Descripton</h4>
+
+<P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Nisi scelerisque eu ultrices vitae. Pretium nibh ipsum consequat nisl vel pretium lectus. Mauris nunc congue nisi vitae suscipit tellus mauris. Gravida in fermentum et sollicitudin. Consequat interdum varius sit amet mattis vulputate. Proin libero nunc consequat interdum varius sit amet. Quam vulputate dignissim suspendisse in est. Turpis tincidunt id aliquet risus feugiat in ante metus. Mauris ultrices eros in cursus turpis. Ut sem nulla pharetra diam sit amet nisl suscipit. Quam id leo in vitae turpis massa. Nunc sed id semper risus. A pellentesque sit amet porttitor eget dolor morbi non arcu. Tristique risus nec feugiat in fermentum posuere. Vitae auctor eu augue ut lectus arcu. Nam libero justo laoreet sit amet cursus sit amet dictum. Turpis massa sed elementum tempus egestas sed sed. Et odio pellentesque diam volutpat.</P>
+
+<P>Et ligula ullamcorper malesuada proin libero nunc consequat. Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet volutpat consequat mauris nunc. Libero enim sed faucibus turpis in eu. Turpis egestas sed tempus urna et pharetra pharetra massa. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Id consectetur purus ut faucibus. Tristique et egestas quis ipsum. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus. Ullamcorper eget nulla facilisi etiam. Morbi leo urna molestie at elementum eu facilisis. Felis bibendum ut tristique et egestas quis ipsum. Risus nec feugiat in fermentum posuere urna nec. Sit amet commodo nulla facilisi nullam vehicula ipsum a.</P>
 
 </body>
 
