Added photo and updated index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <body>
 
-<h1>Odin Recipes</h1>
-
-
+<h1>Sweet Recipes</h1>
+<img src="/recipes/bakedgoods.jpeg">
+<a href="/recipes/bestbrownies.html">Brownies!</a>
     </body>
 
 
