Updated index file and fixed image error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <body>
 
 <h1>Sweet Recipes</h1>
-<img src="/recipes/bakedgoods.jpeg">
+
+<img src="recipes/bakedgoods.jpeg">
+<br><br>
 <a href="/recipes/bestbrownies.html">Brownies!</a>
     </body>
 
