--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <img src="recipes/bakedgoods.jpeg">
 <br><br>
-<a href="/recipes/bestbrownies.html">Brownies!</a>
+<ul>
+    <li><a href="/recipes/bestbrownies.html">Brownies!</a></li>
+</ul>
     </body>
 
 
