--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <br><br>
 <ul>
     <li><a href="/recipes/bestbrownies.html">Brownies!</a></li>
+    <li>Other Recipe</li>
+    <li>Other Recipe 2</li>
 </ul>
     </body>
 
